@@ -221,31 +221,31 @@
 <td><p>[]</p></td>
 <td><p>surface albedo</p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>water_vapor_column_number_density</strong></p></td>
+<tr class="row-odd"><td><p><strong>water_vapor_column_density</strong></p></td>
 <td><p>float</p></td>
 <td><p>{<em>time</em>}</p></td>
-<td><p>[mol/m^2]</p></td>
+<td><p>[kg/m^2]</p></td>
 <td><p>total vertical column of water vapor</p></td>
 </tr>
-<tr class="row-even"><td><p><strong>water_vapor_column_number_density_uncertainty</strong></p></td>
+<tr class="row-even"><td><p><strong>water_vapor_column_density_uncertainty</strong></p></td>
 <td><p>float</p></td>
 <td><p>{<em>time</em>}</p></td>
-<td><p>[mol/m^2]</p></td>
+<td><p>[kg/m^2]</p></td>
 <td><p>precision of the total vertical column of water vapor</p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>water_vapor_column_number_density_validity</strong></p></td>
+<tr class="row-odd"><td><p><strong>water_vapor_column_density_validity</strong></p></td>
 <td><p>int8</p></td>
 <td><p>{<em>time</em>}</p></td>
 <td></td>
 <td><p>continuous quality descriptor, varying between 0 (no data) and 100 (full quality data)</p></td>
 </tr>
-<tr class="row-even"><td><p><strong>water_vapor_column_number_density_amf</strong></p></td>
+<tr class="row-even"><td><p><strong>water_vapor_column_density_amf</strong></p></td>
 <td><p>float</p></td>
 <td><p>{<em>time</em>}</p></td>
 <td><p>[]</p></td>
 <td><p>water vapor total column air mass factor</p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>water_vapor_column_number_density_avk</strong></p></td>
+<tr class="row-odd"><td><p><strong>water_vapor_column_density_avk</strong></p></td>
 <td><p>float</p></td>
 <td><p>{<em>time</em>, <em>vertical</em>}</p></td>
 <td><p>[]</p></td>
@@ -378,23 +378,23 @@
 <td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/SUPPORT_DATA/INPUT_DATA/surface_albedo[]</strong></p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>water_vapor_column_number_density</strong></p></td>
+<tr class="row-odd"><td><p><strong>water_vapor_column_density</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/total_column_water_vapor</strong></p></td>
 </tr>
-<tr class="row-even"><td><p><strong>water_vapor_column_number_density_uncertainty</strong></p></td>
+<tr class="row-even"><td><p><strong>water_vapor_column_density_uncertainty</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/total_column_water_vapor_precision</strong></p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>water_vapor_column_number_density_validity</strong></p></td>
+<tr class="row-odd"><td><p><strong>water_vapor_column_density_validity</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/qa_value</strong></p></td>
 </tr>
-<tr class="row-even"><td><p><strong>water_vapor_column_number_density_amf</strong></p></td>
+<tr class="row-even"><td><p><strong>water_vapor_column_density_amf</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/SUPPORT_DATA/DETAILED_RESULTS/air_mass_factor_total[]</strong></p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>water_vapor_column_number_density_avk</strong></p></td>
+<tr class="row-odd"><td><p><strong>water_vapor_column_density_avk</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/SUPPORT_DATA/DETAILED_RESULTS/averaging_kernel[]</strong></p></td>
 </tr>
