@@ -7,6 +7,7 @@
   - S5P L2 CLOUD: added support for nir-band spatial grid data
   - S5P PAL L2 BRO: fixed memory issue with reading total column and
     uncertainty variables
+  - S5P PAL L2 TCWV: fixed wrong quantity for density variables
 
 1.20.2 2023-11-13
 ~~~~~~~~~~~~~~~~~
